style [PD] mengedit card iklan dan card categories

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,11 +70,12 @@ flutter:
   assets:
     - assets_img/logo.png
     - assets_img/modell.png
-    - assets_img/modelcl2.jpg
-    - assets_img/clmodel.jpg
-    - assets_img/clmodelman.jpg
-    - assets_img/clmodel2.jpeg
-    - assets_img/clmodel3.jpg
+    - assets_img/cardCP1.png
+    - assets_img/cardCP2.png
+    - assets_img/cardCP3.png
+    - assets_img/cardCP4.png
+    - assets_img/cardCP5.png
+    - assets_img/cardCP6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
