feat: [PD] hit api dan merapikan code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http:
   get:
+  carousel_slider:
+  flutter_rating_bar:
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,10 @@ flutter:
     - assets_img/cardCP4.png
     - assets_img/cardCP5.png
     - assets_img/cardCP6.png
+    - assets_img/model3.png
+    - assets_img/model4.png
+    - assets_img/model5.png
+    - assets_img/model6.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
