--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_native_splash:
   shared_preferences:
   introduction_screen:
+  google_nav_bar:
 
 dev_dependencies:
   flutter_test:
